--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#resume {
+    width: 50vw;
+    background-color: coral;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.infopanel {
+    background-color:antiquewhite;
+}
+
+h2 {
+    margin-top: 0;
+}
