--- a/src/styles2.css
+++ b/src/styles2.css
@@ -3,30 +3,101 @@
     --leafy: rgb(11, 109, 11);
 }
 
+@media only screen and (min-width: 1200px) {
+    #resume {
+        width: 900px !important;
+        border-left: 8px solid black;
+        border-right: 8px solid black;
+    }
+
+    #generalinfobox {
+        transform: translate(-25%) !important;
+    }
+}
+
 body {
   margin: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+
+
 #app {
     display: flex;
     flex-direction: column;
+    align-items: center;
     height: 100vh;
+    background-color: pink;
+    position: relative;
+
 }
 
-#app>:not(#resume) {
+#showeditbtn {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: 3;
+    font-size: 3rem;
+    padding: 0px 15px 0px 15px;
+    margin: 10px;
+    background-color: rgba(75, 75, 75, 0.287);
+    backdrop-filter: blur(0px);
+    border: none;
+    color: black;
+    transition: all 0.4s;
+}
+
+#showeditbtn:hover {
+    color: white;
+    backdrop-filter: blur(10px);
+    background-color: rgba(75, 75, 75, 0.644);
+}
+
+#inputsbox {
     display: none;
+    grid-template-columns: auto auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    background-color: rgba(11, 109, 11, 0.644);
+    backdrop-filter: blur(5px);
+    padding: 15px;
+    color: white;
+}
+
+#inputsbox.shown {
+    display: grid;
+}
+
+#inputsbox>h2 {
+    grid-column: span 2;
+    text-align: center;
+    color: black;
+}
+
+
+#generalinputs {
+    display: flex;
+    flex-direction: column;
+}
+
+#editinputs {
+    display: flex;
+    flex-direction: column;
 }
 
 #resume {
+    box-sizing: border-box;
     width: 100vw;
+    height: 100vh;
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: 20% auto;
-    flex-grow: 1;
-    background-color: var(--papyrus);
+    background-color: pink;
     position: relative;
     overflow: hidden;
+
 }
 
 #plant {
@@ -103,7 +174,6 @@ body {
     flex-direction: column;
     justify-content: flex-end;
     position: relative;
-    width: 50vw;
 }   
 
 #education:after {
@@ -158,7 +228,6 @@ body {
     display: flex;
     flex-direction: column;
     position: relative;
-    width: 50vw;
     align-items: flex-end;
 }
 
