--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,22 @@
         border-right: 8px solid black;
     }
 
+    #cryptoresume {
+        width: 1100px !important;
+    }
+
+    .dingbat {
+        font-size: 20vw !important;
+    }
+
     #generalinfobox {
         transform: translate(-25%) !important;
     }
+}
+
+@font-face {
+    font-family: floralia;
+    src: url('./fonts/Floralia.ttf');
 }
 
 @font-face {
@@ -60,7 +73,7 @@ body {
     backdrop-filter: blur(0px);
     border: none;
     color: black;
-    transition: all 0.4s;
+    transition: all 0.3s;
 }
 
 #showeditbtn:hover {
@@ -75,7 +88,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 3;
+    z-index: 5;
     background-color: rgba(11, 109, 11, 0.644);
     backdrop-filter: blur(5px);
     padding: 15px;
@@ -277,7 +290,7 @@ h1, h2, h3 {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1.5fr 1.5fr;
     gap: 20px;
-    padding: 20px;
+    padding: 0 20px 20px 20px;
     font-family: neogrotesk, sans-serif;
     overflow: hidden;
 }
@@ -587,4 +600,53 @@ h1, h2, h3 {
     50% {transform: scaleY(-100%);}
     90% {transform: scaleY(-100%);}
     100% {transform: scaleY(100%);}
+}
+
+.dingbat {
+    font-family: floralia;
+    font-size: 12rem;
+    color: white;
+    margin-top: -35px;
+    color: red;
+
+}
+
+#dingbat1 {
+    position: fixed;
+    top: 0;
+    left: 25px;
+    margin-top: -35px;
+    z-index: 4;
+    transform: rotate(180deg);
+}
+
+#dingbat2 {
+    position: fixed;
+    top: 0;
+    right: 25px;
+    transform: rotate(180deg);
+    margin-top: -30px;
+    z-index: 4;
+}
+
+button {
+    border: none;
+    font-size: 1rem;
+    background-color: white;
+    color: black;
+    padding: 5px 12px;
+    margin: 7px;
+    font-family: neogrotesk, sans-serif;
+    transition: all 0.4s;
+}
+
+button:hover {
+    background-color: black;
+    color: red;
+}
+
+#stylebtn {
+    position: fixed;
+    display: initial;
+    z-index: 2;
 }
